[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/deathguy_font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/deathguy_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/screen/end_screen.gd" type="Script" id=3]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=4]
[ext_resource path="res://debug/AdMobDebug.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sfx/click.wav" type="AudioStream" id=6]
[ext_resource path="res://src/fakeads/FakeAds.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "end_anim"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AdMobDebug" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.368627, 0.368627, 0.368627, 0.886275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 240.0
rect_min_size = Vector2( 400, 332 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Retry!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdsButton" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 400.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "A second chance!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomizeButton" type="Button" parent="VBoxContainer"]
margin_top = 168.0
margin_right = 400.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Customize!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 252.0
margin_right = 400.0
margin_bottom = 332.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -340.0
margin_top = 160.0
margin_right = 340.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
text = "Your record: %d"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FakeAds" parent="." instance=ExtResource( 7 )]

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}
is_real = true
is_personalized = false
max_ad_content_rate = "T"

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -16.0
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 2 )
anims/end_anim = SubResource( 3 )
[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AdsButton" to="." method="_on_AdsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CustomizeButton" to="." method="_on_CustomizeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="rewarded" from="AdMob" to="." method="_on_AdMob_rewarded"]
[connection signal="rewarded_video_closed" from="AdMob" to="." method="_on_AdMob_rewarded_video_closed"]
[connection signal="rewarded_video_failed_to_load" from="AdMob" to="." method="_on_AdMob_rewarded_video_failed_to_load"]
[connection signal="rewarded_video_loaded" from="AdMob" to="." method="_on_AdMob_rewarded_video_loaded"]
